# f5-ai-guardrails-openai-api-integration

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.proxy  README.md  docker-compose.yml  helper.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_tests.sh
.github/: copilot-instructions.md
frontend/: Dockerfile  index.html
src/: guardrails.py  helper.py  main.py
terraform/: .gitignore  README.md  main.tf  outputs.tf  variables.tf
tests/: README.md  conftest.py  test_chat_completions.py  test_e2e_scenarios.py  test_guardrails_integration.py  test_models.py  test_query_params.py
tests/mocks/: guardrails_mock.py  openai_mock.py
