[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f5-ai-guardrails-openai-api-integration"
version = "0.1.0"
description = "F5 AI Guardrails integration with OpenAI API proxy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "respx>=0.20.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
